header distorted after other adjustments - fixed

--- a/styles/millum.css
+++ b/styles/millum.css
@@ -23,14 +23,10 @@ hovedfarge mørk font: #363639;
 
 H1: 40px (ikke pt som på skissen)
 H2: 28px 
-H3: 17px
-H4: 15px
+H3: 20px
+H4: 17px
 
 p
-
-
-
-
 
 */
 
@@ -48,8 +44,14 @@ body {
     color: #363639;
 }
 
+h1, h2, h3, h4, p, div, span, #login-box, #nav-contact {
+    color: #363639;
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
 p {
-    font-family: 'PT Sans', sans-serif;
+ 
+    line-height: 1.4;
 }
 
 
@@ -68,7 +70,7 @@ nav ul li {
 }
 
 nav ul li.selected-item span {
-    border-bottom: 2pt solid #118AF3;
+    /*border-bottom: 2pt solid #118AF3;*/
     padding: 1em 1em .5em;
 }
 
@@ -80,12 +82,10 @@ nav ul li.selected-item span {
 /* typography */
 /**************/
 
-h1,h2, h3, h4 {
+h1,h2, h3, h4 , #login-box{
     font-weight: 700;    
     font-family: 'PT Sans Narrow', sans-serif;
 }
-
-
 
 h1 {
     font-size: 40px;
@@ -104,7 +104,7 @@ h4 {
     font-size: 16px;
 }
 
-p {
+p,span {
     font-size: 14px;
 
 }
@@ -188,7 +188,8 @@ div.img-description-vertical {
     color: #FFF;
     font-size: 15px;
     background-color: #8E8983;
-    opacity: 0.6;
+    color: #363639;
+    opacity: 1.0;
 /* transparency */
     filter: alpha(opacity=60);
 /* IE transparency */
@@ -201,7 +202,6 @@ p.img-description-content {
     padding: .5em;
     margin: 0;
 }
-
 
 
 /*    positioning   */
@@ -274,6 +274,7 @@ p.img-description-content {
 
 #template-changer a {
     font-size: 15px;
+    font-weight: 700;
     color: #363639;
 }
 
@@ -307,6 +308,7 @@ p.img-description-content {
 #nav-contact {
     width: 20%;
     float: right;
+    font-weight: 400;
     margin-right: 0.7em;
     margin-top: 0.7em;
 }
@@ -402,9 +404,11 @@ p.img-description-content {
 }
 
 #login-box {
-    width: 10%;
+    
     float: right;
     font-size: 15px;
+    font-weight: 400;
+    width: 10%;
 }
 
 .login-box {
@@ -417,7 +421,7 @@ p.img-description-content {
     height: 0;
     width: 0;
     right: 0;
-    top: 4.0em;
+    top: 4.3em;
     border-top: 1.1em solid #323335;
     border-left: 4em solid transparent;
     position: absolute;
@@ -428,7 +432,7 @@ p.img-description-content {
     height: 0;
     width: 0;
     left: 0;
-    top: 4.0em;
+    top: 4.3em;
     border-top: 1.1em solid #323335;
     border-right: 4em solid transparent;
     position: absolute;
@@ -616,7 +620,9 @@ footer {
 
 footer ul {
     list-style-type: none;
+    margin-left: 0;
 }
+
 
 #millum-footer .large-4 {
     text-align: center;
@@ -642,6 +648,7 @@ footer h4 {
 
 #millum-footer li {
     font-size: 12px;
+    color: #fff;
 }
 
 
@@ -797,9 +804,9 @@ footer h4 {
     height: 0;
     width: 0;
     right: 0;
-    top: 3.1em;
-    border-top: 1.10em solid #8E8983;
-    border-right: 5.5em solid transparent;
+    top: 3.5em;
+    border-top: 1.52em solid #8E8983;
+    border-right: 6.3em solid transparent;
     position: absolute; 
     padding: 0!important;
   display: none;
@@ -810,14 +817,13 @@ footer h4 {
     height: 0;
     width: 0;
     left: 0;
-    top: 3.1em;
-    border-top: 1.10em solid #8E8983;
-    border-left: 5.5em solid transparent;
+    top: 3.5em;
+    border-top: 1.52em solid #8E8983;
+    border-left: 6.3em solid transparent;
     position: absolute; 
     padding: 0!important;
     display: none;
 }
-
 
 .selected-item .right-menuitem-triangle, .selected-item .left-menuitem-triangle  {
   display: block;
@@ -827,8 +833,24 @@ footer h4 {
 
 
 
+/*********************************************************
 
+      PRODUKTER STYLES
 
+*********************************************************/
+
+#product-template {
+    margin-bottom: 3em;
+}
+
+#product-wrapper {
+    padding: 0 1.5em;
+}
+
+#top-level-section {
+    /*padding: 0 1em;*/
+
+}
 
 
 
